manual: make hp bar width match max hp
not worth using credits to fix this

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -398,7 +398,7 @@
 
 			// HUD - render in screen space
 			// Health bar
-			const healthBarWidth = GameConfig.HUD.HEALTH_BAR_WIDTH;
+			const healthBarWidth = gameState.player.maxHealth;
 			const healthBarHeight = GameConfig.HUD.HEALTH_BAR_HEIGHT;
 			const healthBarX = GameConfig.HUD.HEALTH_BAR_X;
 			const healthBarY = GameConfig.HUD.HEALTH_BAR_Y;
