vibe: audio issues keep coming back, perhaps this will fix them?
I still have no idea id this really fixes the issue, but at leas there's more debug logs

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -116,7 +116,10 @@
 		const gameState = new GameState(canvas);
 
 		// Game state management functions
-		function startGame() {
+		async function startGame() {
+			// Resume audio context on user interaction (required by browser autoplay policies)
+			await SoundManager.resumeAudioContext();
+
 			gameState.reset();
 			gameState.currentState = GameState.States.PLAYING;
 			menuSystem.hideMenu();
