--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -653,14 +653,26 @@
 						shotAngle += angleOffset;
 					}
 
-					const shotVelocity = Vector2D.fromRadial(shotAngle, Laser.speed);
-					const newShot = new Laser(
-						new Vector2D(
-							gameState.player.sprite.position.x,
-							gameState.player.sprite.position.y
-						),
-						shotVelocity
+					// Determine projectile type for this shot
+					const projectileType = weaponStats.projectileTypes[i];
+					let newShot;
+					const shotPosition = new Vector2D(
+						gameState.player.sprite.position.x,
+						gameState.player.sprite.position.y
 					);
+
+					if (projectileType === 'plasma') {
+						const shotVelocity = Vector2D.fromRadial(shotAngle, Plasma.speed);
+						newShot = new Plasma(shotPosition, shotVelocity, true);
+					} else if (projectileType === 'missile') {
+						const shotVelocity = Vector2D.fromRadial(shotAngle, Missile.speed);
+						newShot = new Missile(shotPosition, shotVelocity, true);
+					} else {
+						// Default to laser
+						const shotVelocity = Vector2D.fromRadial(shotAngle, Laser.speed);
+						newShot = new Laser(shotPosition, shotVelocity);
+					}
+
 					gameState.playerProjectiles.push(newShot);
 				}
 				playSoundEffect('shoot', 0.3);
